Add /balance endpoint for transactions with all filters
