# server/apps/pockets/viewsets/transaction.py
@@ -1,7 +1,6 @@
 from decimal import Decimal
 from typing import Type, Union
 
-from django.utils import timezone
 from rest_framework import pagination, serializers, viewsets
 from rest_framework.decorators import action
 from rest_framework.permissions import IsAuthenticated
@@ -12,6 +11,7 @@ from ..filters import TransactionFilter
 from ..models import Transaction
 from ..models.querysets import TransactionQuerySet
 from ..serializers import (
+    TransactionBalanceSerializer,
     TransactionCreateSerializer,
     TransactionGlobalSerializer,
     TransactionRetrieveSerializer,
@@ -27,6 +27,8 @@ class TransactionViewSet(viewsets.ModelViewSet):
     def get_serializer_class(self) -> Type[serializers.ModelSerializer]:
         if self.action == "total":
             serializer_class = TransactionGlobalSerializer
+        elif self.action == "balance":
+            serializer_class = TransactionBalanceSerializer
         elif self.action in {"create", "update", "partial_update"}:
             serializer_class = TransactionCreateSerializer
         else:
@@ -50,9 +52,13 @@ class TransactionViewSet(viewsets.ModelViewSet):
 
     def get_object(self) -> Union[Transaction, dict[str, Decimal]]:
         if self.action == "total":
-            current_month = timezone.now().month
-            queryset = self.get_queryset().filter(transaction_date__month=current_month)
-            obj = self.filter_queryset(queryset).aggregate_totals()
+            queryset = self.get_queryset()
+            queryset = self.filter_queryset(queryset)
+            obj = queryset.aggregate_totals()
+        elif self.action == "balance":
+            queryset = self.get_queryset()
+            queryset = self.filter_queryset(queryset)
+            obj = queryset.get_balance()
         else:
             obj = super().get_object()
 
@@ -60,4 +66,8 @@ class TransactionViewSet(viewsets.ModelViewSet):
 
     @action(methods=("GET",), detail=False, url_path="global")
     def total(self, request: Request, *args, **kwargs) -> Response:
+        return super().retrieve(request, *args, **kwargs)
+
+    @action(methods=("GET",), detail=False, url_path="balance")
+    def balance(self, request: Request, *args, **kwargs) -> Response:
         return super().retrieve(request, *args, **kwargs)
